# Protobuf_Deobfuscator

./: .gitignore  README.md  pyproject.toml
example/: obf.proto  ref.proto
protobuf_deobfuscator/: ast.py  biasing.py  bottom_up.py  cli.py  cross_ref.py  fields.py  graphs.py  hungarian.py  pipeline.py  similarities.py
